fix: button align

--- a/public/style.css
+++ b/public/style.css
@@ -599,8 +599,8 @@ video {
   display: none;
 }
 
-.h-32 {
-  height: 8rem;
+.h-44 {
+  height: 11rem;
 }
 
 .h-6 {
@@ -615,14 +615,6 @@ video {
   height: 100%;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
-.h-44 {
-  height: 11rem;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -631,8 +623,8 @@ video {
   width: 3rem;
 }
 
-.w-32 {
-  width: 8rem;
+.w-44 {
+  width: 11rem;
 }
 
 .w-6 {
@@ -653,14 +645,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-44 {
-  width: 11rem;
 }
 
 .max-w-full {
@@ -846,9 +830,8 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .pb-2 {
@@ -879,16 +862,12 @@ video {
   padding-right: 2.5rem;
 }
 
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
 .pt-20 {
   padding-top: 5rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .text-left {
@@ -954,19 +933,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-secondary-color {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-primary-color {
-  --tw-text-opacity: 1;
-  color: rgb(33 63 111 / var(--tw-text-opacity));
 }
 
 .drop-shadow-sm {
@@ -1061,12 +1030,120 @@ img {
   cursor: pointer;
 }
 
-.prev-btn {
-  left: 10px;
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  /* estilos para tablets */
+
+  .prev-btn {
+    left: 30px;
+    margin: 45px;
+    z-index: 1;
+  }
+
+  .next-btn {
+    right: 30px;
+    margin: 45px;
+    z-index: 1;
+  }
 }
 
-.next-btn {
-  right: 10px;
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  /* estilos para tablets maiores e monitores pequenos */
+
+  .prev-btn {
+    left: 30px;
+    margin: 45px;
+    z-index: 1;
+  }
+
+  .next-btn {
+    right: 30px;
+    margin: 45px;
+    z-index: 1;
+  }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1200px) {
+  .prev-btn {
+    left: 140px;
+    margin: 45px;
+    z-index: 1;
+  }
+
+  .next-btn {
+    right: 140px;
+    margin: 45px;
+    z-index: 1;
+  }
+}
+
+@media only screen and (min-width: 1201px) and (max-width: 1400px){
+  .prev-btn {
+    left: 210px;
+    margin: 45px;
+    z-index: 1;
+  }
+
+  .next-btn {
+    right: 210px;
+    margin: 45px;
+    z-index: 1;
+  }
+}
+
+@media only screen and (min-width: 1401px) and (max-width: 1700px){
+  .prev-btn {
+    left: 330px;
+    margin: 45px;
+    z-index: 1;
+  }
+
+  .next-btn {
+    right: 330px;
+    margin: 45px;
+    z-index: 1;
+  }
+}
+
+@media only screen and (min-width: 1701px) and (max-width: 1900px){
+  .prev-btn {
+    left: 450px;
+    margin: 45px;
+    z-index: 1;
+  }
+
+  .next-btn {
+    right: 450px;
+    margin: 45px;
+    z-index: 1;
+  }
+}
+
+@media only screen and (min-width: 1901px) and (max-width: 2100px) {
+  .prev-btn {
+    left: 550px;
+    margin: 45px;
+    z-index: 1;
+  }
+
+  .next-btn {
+    right: 550px;
+    margin: 45px;
+    z-index: 1;
+  }
+}
+
+@media only screen and (min-width: 2101px) {
+  .prev-btn {
+    left: 680px;
+    margin: 45px;
+    z-index: 1;
+  }
+
+  .next-btn {
+    right: 680px;
+    margin: 45px;
+    z-index: 1;
+  }
 }
 
 .prev-btn span, .next-btn span {
@@ -1115,20 +1192,12 @@ img {
     display: none;
   }
 
-  .sm\:h-\[600px\] {
-    height: 600px;
-  }
-
-  .sm\:h-96 {
-    height: 24rem;
-  }
-
-  .sm\:h-52 {
-    height: 13rem;
-  }
-
   .sm\:h-48 {
     height: 12rem;
+  }
+
+  .sm\:h-\[600px\] {
+    height: 600px;
   }
 
   .sm\:w-16 {
@@ -1139,24 +1208,16 @@ img {
     width: 75%;
   }
 
+  .sm\:w-48 {
+    width: 12rem;
+  }
+
   .sm\:w-60 {
     width: 15rem;
   }
 
   .sm\:w-auto {
     width: auto;
-  }
-
-  .sm\:w-96 {
-    width: 24rem;
-  }
-
-  .sm\:w-52 {
-    width: 13rem;
-  }
-
-  .sm\:w-48 {
-    width: 12rem;
   }
 
   .sm\:grid-cols-1 {
@@ -1191,6 +1252,10 @@ img {
     margin-right: 1rem;
   }
 
+  .md\:inline-block {
+    display: inline-block;
+  }
+
   .md\:h-44 {
     height: 11rem;
   }
@@ -1217,12 +1282,8 @@ img {
     height: 12rem;
   }
 
-  .lg\:h-96 {
-    height: 24rem;
-  }
-
-  .lg\:w-10\/12 {
-    width: 83.333333%;
+  .lg\:w-11\/12 {
+    width: 91.666667%;
   }
 
   .lg\:w-3\/4 {
@@ -1235,14 +1296,6 @@ img {
 
   .lg\:w-5\/12 {
     width: 41.666667%;
-  }
-
-  .lg\:w-96 {
-    width: 24rem;
-  }
-
-  .lg\:w-11\/12 {
-    width: 91.666667%;
   }
 
   .lg\:grid-cols-2 {
